--- a/ui/index.html
+++ b/ui/index.html
@@ -7,10 +7,41 @@
     <link rel="stylesheet" href="styles_minimal.css">
 </head>
 <body>
+    <!-- SVG图标库 -->
+    <svg style="display: none;">
+        <symbol id="icon-folder" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"/>
+        </symbol>
+        <symbol id="icon-doc" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 16H8v-2h8v2zm0-4H8v-2h8v2zm-3-5V3.5L18.5 9H13z"/>
+        </symbol>
+        <symbol id="icon-activity" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
+        </symbol>
+        <symbol id="icon-minimize" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M19 13H5v-2h14v2z"/>
+        </symbol>
+        <symbol id="icon-close" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+        </symbol>
+        <symbol id="icon-check" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/>
+        </symbol>
+        <symbol id="icon-error" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/>
+        </symbol>
+        <symbol id="icon-up" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M7 14l5-5 5 5z"/>
+        </symbol>
+        <symbol id="icon-down" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M7 10l5 5 5-5z"/>
+        </symbol>
+    </svg>
+    
     <!-- Mini悬浮窗模式 -->
     <div class="mini-window" id="miniWindow" style="display: none;">
         <div class="mini-content">
-            <div class="mini-icon">📂</div>
+            <svg class="mini-icon" width="40" height="40"><use href="#icon-folder"/></svg>
             <div class="mini-text">
                 <div class="mini-label" id="miniRuleLabel">[*]</div>
                 <div class="mini-name" id="miniRuleName">所有规则</div>
@@ -21,21 +52,21 @@
 
     <!-- 完整界面 -->
     <div class="app-container" id="appContainer">
+        <!-- 自定义拖拽区域 -->
+        <div class="drag-region" data-tauri-drag-region></div>
+        
         <!-- 顶部标题栏 -->
         <header class="app-header">
             <div class="logo">
-                <span class="logo-icon">📂</span>
+                <svg class="logo-icon" width="24" height="24"><use href="#icon-folder"/></svg>
                 <h1>FloatSort</h1>
             </div>
             <div class="header-actions">
-                <button class="icon-btn" id="globalStartBtn" title="启动所有监控">
-                    <span>▶️</span>
-                </button>
-                <button class="icon-btn" id="globalStopBtn" title="停止所有监控" style="display: none;">
-                    <span>⏸️</span>
-                </button>
                 <button class="icon-btn" id="minimizeBtn" title="最小化为悬浮窗">
-                    <span>➖</span>
+                    <svg width="18" height="18"><use href="#icon-minimize"/></svg>
+                </button>
+                <button class="icon-btn close-btn" id="closeWindowBtn" title="关闭">
+                    <svg width="18" height="18"><use href="#icon-close"/></svg>
                 </button>
             </div>
         </header>
@@ -43,13 +74,16 @@
         <!-- Tab 切换 -->
         <nav class="tab-nav">
             <button class="tab-btn active" data-tab="rules">
-                📋 规则
+                <svg width="16" height="16"><use href="#icon-doc"/></svg>
+                <span>规则</span>
             </button>
             <button class="tab-btn" data-tab="folders">
-                📁 文件夹
+                <svg width="16" height="16"><use href="#icon-folder"/></svg>
+                <span>文件夹</span>
             </button>
             <button class="tab-btn" data-tab="activity">
-                📊 活动
+                <svg width="16" height="16"><use href="#icon-activity"/></svg>
+                <span>活动</span>
             </button>
         </nav>
 
@@ -61,12 +95,12 @@
                 <div class="pane-header">
                     <h2>整理规则</h2>
                     <button class="btn-primary" id="addRuleBtn">
-                        ➕ 添加规则
+                        + 添加规则
                     </button>
                 </div>
                 <div class="rules-list" id="rulesList">
                     <div class="empty-state">
-                        <span class="empty-icon">📋</span>
+                        <svg class="empty-icon" width="48" height="48"><use href="#icon-doc"/></svg>
                         <p>暂无规则</p>
                         <p class="empty-hint">创建规则来自动整理文件</p>
                     </div>
@@ -78,12 +112,12 @@
                 <div class="pane-header">
                     <h2>监控文件夹</h2>
                     <button class="btn-primary" id="addFolderBtn">
-                        ➕ 添加文件夹
+                        + 添加文件夹
                     </button>
                 </div>
                 <div class="folder-list" id="folderList">
                     <div class="empty-state">
-                        <span class="empty-icon">📂</span>
+                        <svg class="empty-icon" width="48" height="48"><use href="#icon-folder"/></svg>
                         <p>暂无监控文件夹</p>
                         <p class="empty-hint">点击上方按钮添加文件夹开始监控</p>
                     </div>
@@ -126,8 +160,10 @@
     <div class="modal" id="folderModal" style="display: none;">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 id="folderModalTitle">📁 添加文件夹</h2>
-                <button class="close-btn" id="closeFolderModal">✕</button>
+                <h2 id="folderModalTitle">添加文件夹</h2>
+                <button class="close-btn" id="closeFolderModal">
+                    <svg width="16" height="16"><use href="#icon-close"/></svg>
+                </button>
             </div>
             <div class="modal-body">
                 <form id="folderForm">
@@ -167,8 +203,10 @@
     <div class="modal" id="ruleModal" style="display: none;">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 id="ruleModalTitle">📝 创建规则</h2>
-                <button class="close-btn" id="closeRuleModal">✕</button>
+                <h2 id="ruleModalTitle">创建规则</h2>
+                <button class="close-btn" id="closeRuleModal">
+                    <svg width="16" height="16"><use href="#icon-close"/></svg>
+                </button>
             </div>
             <div class="modal-body">
                 <form id="ruleForm">
@@ -220,12 +258,14 @@
         <div class="modal-content" style="max-width: 700px;">
             <div class="modal-header">
                 <div>
-                    <h2>🔔 批量整理确认</h2>
+                    <h2>批量整理确认</h2>
                     <p style="margin: 5px 0 0 0; font-size: 13px; color: #666;">
                         检测到 <span id="batchCount" style="color: #667eea; font-weight: bold;">0</span> 个文件待整理
                     </p>
                 </div>
-                <button class="close-btn" id="closeBatchModal">✕</button>
+                <button class="close-btn" id="closeBatchModal">
+                    <svg width="16" height="16"><use href="#icon-close"/></svg>
+                </button>
             </div>
             <div class="modal-body">
                 <div class="batch-file-list" id="batchFileList">
