--- a/ui/index_v2.html
+++ b/ui/index_v2.html
@@ -39,7 +39,7 @@
     </svg>
     
     <!-- Mini悬浮窗模式 -->
-    <div class="mini-window" id="miniWindow" style="display: none;">
+    <div class="mini-window" id="miniWindow" style="display: none;" data-tauri-drag-region>
         <div class="mini-content">
             <svg class="mini-icon" width="40" height="40"><use href="#icon-folder"/></svg>
             <div class="mini-text">
@@ -52,21 +52,18 @@
 
     <!-- 完整界面 -->
     <div class="app-container" id="appContainer">
-        <!-- 自定义拖拽区域 -->
-        <div class="drag-region" data-tauri-drag-region></div>
-        
         <!-- 顶部标题栏 -->
-        <header class="app-header">
+        <header class="app-header" data-tauri-drag-region>
             <div class="logo">
                 <svg class="logo-icon" width="24" height="24"><use href="#icon-folder"/></svg>
                 <h1>FloatSort</h1>
             </div>
             <div class="header-actions">
                 <button class="icon-btn" id="minimizeBtn" title="最小化为悬浮窗">
-                    <svg width="18" height="18"><use href="#icon-minimize"/></svg>
+                    <svg width="16" height="16"><use href="#icon-minimize"/></svg>
                 </button>
                 <button class="icon-btn close-btn" id="closeWindowBtn" title="关闭">
-                    <svg width="18" height="18"><use href="#icon-close"/></svg>
+                    <svg width="16" height="16"><use href="#icon-close"/></svg>
                 </button>
             </div>
         </header>
