--- a/ui/index_v2.html
+++ b/ui/index_v2.html
@@ -39,8 +39,8 @@
     </svg>
     
     <!-- Mini悬浮窗模式 -->
-    <div class="mini-window" id="miniWindow" style="display: none;" data-tauri-drag-region>
-        <div class="mini-content">
+    <div class="mini-window" id="miniWindow" style="display: none;">
+        <div class="mini-content" data-tauri-drag-region>
             <svg class="mini-icon" width="40" height="40"><use href="#icon-folder"/></svg>
             <div class="mini-text">
                 <div class="mini-label" id="miniRuleLabel">[*]</div>
