--- a/ui/index.html
+++ b/ui/index.html
@@ -177,9 +177,14 @@
                 <div class="settings-section">
                     <div class="pane-header" style="margin: 0;">
                         <h3 style="margin: 0;">活动日志</h3>
-                        <button class="btn-secondary" id="clearActivityBtn">
-                            🗑️ 清空
-                        </button>
+                        <div style="display: flex; gap: 8px;">
+                            <button class="btn-secondary" id="clearActivityBtn">
+                                🗑️ 清空日志
+                            </button>
+                            <button class="btn-secondary" id="clearProcessedBtn" title="清除已处理文件记录，允许重新整理之前处理过的文件">
+                                🔄 清除记录
+                            </button>
+                        </div>
                     </div>
                     <div class="activity-log" id="activityLog">
                         <div class="activity-item">
@@ -253,6 +258,17 @@
                     
                     <div class="form-group">
                         <label>条件设置</label>
+                        <div class="logic-operator-group">
+                            <label style="font-size: 13px; color: #666;">条件逻辑：</label>
+                            <label class="radio-inline">
+                                <input type="radio" name="conditionLogic" value="or" checked>
+                                <span>或（OR）- 满足任一条件即可</span>
+                            </label>
+                            <label class="radio-inline">
+                                <input type="radio" name="conditionLogic" value="and">
+                                <span>与（AND）- 必须满足所有条件</span>
+                            </label>
+                        </div>
                         <div class="conditions-builder">
                             <div class="condition-selector">
                                 <select id="conditionType">
@@ -277,8 +293,29 @@
                     <div class="form-group">
                         <label for="targetFolder">目标文件夹 <span class="required">*</span></label>
                         <input type="text" id="targetFolder" placeholder="例如：Pictures/{year}/{month}" required>
-                        <p class="hint">相对于监控文件夹的子目录名<br>
-                        支持占位符：<code>{name}</code>=文件名 <code>{ext}</code>=扩展名 <code>{year}</code>=年份 <code>{month}</code>=月份 <code>{day}</code>=日期</p>
+                        <p class="hint">相对于监控文件夹的子目录名，点击下方占位符可快速插入：</p>
+                        <div class="placeholder-tags">
+                            <div class="tag-group">
+                                <span class="tag-group-label">文件属性:</span>
+                                <button type="button" class="tag-btn" data-placeholder="{name}" title="文件名（不含扩展名）">{name}</button>
+                                <button type="button" class="tag-btn" data-placeholder="{ext}" title="扩展名">{ext}</button>
+                            </div>
+                            <div class="tag-group">
+                                <span class="tag-group-label">日期时间:</span>
+                                <button type="button" class="tag-btn" data-placeholder="{year}" title="年份（4位数字）">{year}</button>
+                                <button type="button" class="tag-btn" data-placeholder="{month}" title="月份（2位数字）">{month}</button>
+                                <button type="button" class="tag-btn" data-placeholder="{day}" title="日期（2位数字）">{day}</button>
+                            </div>
+                            <div class="tag-group">
+                                <span class="tag-group-label">系统路径:</span>
+                                <button type="button" class="tag-btn" data-placeholder="{desktop}" title="桌面目录">{desktop}</button>
+                                <button type="button" class="tag-btn" data-placeholder="{documents}" title="文档目录">{documents}</button>
+                                <button type="button" class="tag-btn" data-placeholder="{downloads}" title="下载目录">{downloads}</button>
+                                <button type="button" class="tag-btn" data-placeholder="{pictures}" title="图片目录">{pictures}</button>
+                                <button type="button" class="tag-btn" data-placeholder="{music}" title="音乐目录">{music}</button>
+                                <button type="button" class="tag-btn" data-placeholder="{videos}" title="视频目录">{videos}</button>
+                            </div>
+                        </div>
                     </div>
                 </form>
             </div>
@@ -294,8 +331,8 @@
         <div class="modal-content" style="max-width: 700px;">
             <div class="modal-header">
                 <div>
-                    <h2>批量整理确认</h2>
-                    <p style="margin: 5px 0 0 0; font-size: 13px; color: #666;">
+                    <h2 id="batchModalTitle">批量整理确认</h2>
+                    <p style="margin: 5px 0 0 0; font-size: 13px; color: #666;" id="batchModalSubtitle">
                         检测到 <span id="batchCount" style="color: #667eea; font-weight: bold;">0</span> 个文件待整理
                     </p>
                 </div>
@@ -304,6 +341,23 @@
                 </button>
             </div>
             <div class="modal-body">
+                <!-- 进度条 -->
+                <div class="batch-progress" id="batchProgress" style="display: none;">
+                    <div class="progress-info">
+                        <span id="progressText">正在整理文件...</span>
+                        <span id="progressCount">0 / 0</span>
+                    </div>
+                    <div class="progress-bar-container">
+                        <div class="progress-bar" id="progressBar"></div>
+                    </div>
+                    <div class="progress-stats">
+                        <span class="stat-success">✓ 成功: <strong id="successCount">0</strong></span>
+                        <span class="stat-skip">⊘ 跳过: <strong id="skipCount">0</strong></span>
+                        <span class="stat-fail">✗ 失败: <strong id="failCount">0</strong></span>
+                    </div>
+                </div>
+                
+                <!-- 文件列表 -->
                 <div class="batch-file-list" id="batchFileList">
                     <!-- 文件列表将动态生成 -->
                 </div>
@@ -311,6 +365,41 @@
             <div class="modal-footer">
                 <button class="btn-secondary" id="cancelBatch">取消</button>
                 <button class="btn-primary" id="confirmBatch">确认整理</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- 删除确认模态框 -->
+    <div class="modal" id="deleteConfirmModal" style="display: none;">
+        <div class="modal-content" style="max-width: 450px;">
+            <div class="modal-header">
+                <h2 style="color: #e74c3c; display: flex; align-items: center; gap: 10px;">
+                    <svg width="24" height="24" viewBox="0 0 16 16" fill="none" style="color: #e74c3c;">
+                        <circle cx="8" cy="8" r="7" stroke="currentColor" stroke-width="2" fill="none"/>
+                        <path d="M8 4V8" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                        <circle cx="8" cy="11" r="1" fill="currentColor"/>
+                    </svg>
+                    删除确认
+                </h2>
+                <button class="close-btn" id="closeDeleteConfirm">
+                    <svg width="16" height="16"><use href="#icon-close"/></svg>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p id="deleteConfirmMessage" style="font-size: 14px; line-height: 1.8; color: #333; margin: 0;">
+                    <!-- 确认消息将动态生成 -->
+                </p>
+                <div style="margin-top: 16px; padding: 12px; background: #fff3cd; border-left: 3px solid #ffc107; border-radius: 4px;">
+                    <p style="margin: 0; font-size: 13px; color: #856404;">
+                        ⚠️ <strong>警告：</strong>此操作无法撤销，请谨慎操作！
+                    </p>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn-secondary" id="cancelDelete">取消</button>
+                <button class="btn-primary" id="confirmDelete" style="background: #e74c3c; border-color: #e74c3c;">
+                    确认删除
+                </button>
             </div>
         </div>
     </div>
