支持删除回收站

--- a/ui/index.html
+++ b/ui/index.html
@@ -311,6 +311,10 @@
                                 <button type="button" class="tag-btn" data-placeholder="{music}" title="音乐目录">{music}</button>
                                 <button type="button" class="tag-btn" data-placeholder="{videos}" title="视频目录">{videos}</button>
                             </div>
+                            <div class="tag-group">
+                                <span class="tag-group-label">特殊操作:</span>
+                                <button type="button" class="tag-btn tag-btn-recycle" data-placeholder="{recycle}" title="移动到回收站（文件不会被永久删除）">🗑️ {recycle}</button>
+                            </div>
                         </div>
                     </div>
                 </form>
