--- a/ui/index.html
+++ b/ui/index.html
@@ -255,6 +255,20 @@
                     </div>
                     
                     <div class="form-group">
+                        <label>应用范围</label>
+                        <div class="file-type-checkboxes">
+                            <label class="checkbox-label">
+                                <input type="checkbox" id="applyToFiles" checked>
+                                <span>文件</span>
+                            </label>
+                            <label class="checkbox-label">
+                                <input type="checkbox" id="applyToFolders">
+                                <span>文件夹</span>
+                            </label>
+                        </div>
+                    </div>
+                    
+                    <div class="form-group">
                         <label>条件设置（同时满足所有条件）</label>
                         <div class="conditions-builder">
                             <div class="condition-selector">
