--- a/ui/index.html
+++ b/ui/index.html
@@ -246,6 +246,14 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="processingMode">文件处理模式 <span class="hint-inline">（检测到新文件时的处理方式）</span></label>
+                        <select id="processingMode">
+                            <option value="manual">手动处理（显示待处理数量，点击确认）</option>
+                            <option value="auto">自动处理（立即按规则整理）</option>
+                        </select>
+                        <p class="hint">默认为"手动处理"，可避免误操作</p>
+                    </div>
+                    <div class="form-group">
                         <label class="checkbox-label">
                             <input type="checkbox" id="folderEnabled" checked>
                             <span>立即启用监控</span>
