优化日志系统和关联规则UI
日志系统改进：
- 移除定时刷新后端日志，改为前端实时日志，避免日志丢失
- 统一时间戳格式为完整格式（YYYY-MM-DD HH:MM:SS）
- 增加日志保留数量至200条
- 添加窗口操作日志（启动、最小化、恢复）
- 新增 clear_activity_logs 后端命令，清空日志文件

编辑文件夹-关联规则UI优化：
- 上下移动按钮改为左右布局，放到编辑按钮左边
- 添加删除按钮，支持从文件夹移除规则关联
- 使用与规则列表相同的SVG图标和样式
- 实现 removeFolderRule 函数，包含确认对话框
- 按钮尺寸统一为28x28px，视觉效果更专业

文件稳定性检查：
- 在 file_ops.rs 和 main.rs 中添加详细的日志记录
- 提升日志可读性，便于调试文件处理流程

--- a/ui/index.html
+++ b/ui/index.html
@@ -172,6 +172,33 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="settings-section">
+                    <h3>文件稳定性检查</h3>
+                    <p class="setting-description">防止正在编辑的文件被意外移动，确保文件完全写入完成后再处理</p>
+                    <div class="setting-item-inline">
+                        <div class="setting-group">
+                            <label class="setting-label" for="stabilityDelaySelect">初始延迟</label>
+                            <select id="stabilityDelaySelect" class="setting-select">
+                                <option value="1">1秒</option>
+                                <option value="2">2秒</option>
+                                <option value="3">3秒（推荐）</option>
+                                <option value="5">5秒</option>
+                                <option value="10">10秒</option>
+                            </select>
+                        </div>
+                        <div class="setting-group">
+                            <label class="setting-label" for="stabilityChecksSelect">稳定检查次数</label>
+                            <select id="stabilityChecksSelect" class="setting-select">
+                                <option value="1">1次</option>
+                                <option value="2">2次（推荐）</option>
+                                <option value="3">3次</option>
+                                <option value="5">5次</option>
+                            </select>
+                        </div>
+                    </div>
+                    <p class="hint">检测到文件后，等待初始延迟时间，然后每隔1秒检查文件是否稳定（大小和修改时间不变），连续稳定指定次数后才处理</p>
+                </div>
                 
                 <div class="settings-section">
                     <h3>配置管理</h3>
