feat: 添加正则表达式捕获组功能 v0.2.0
✨ 新增功能:
- 正则表达式捕获组支持 (, , ...)
- 时间条件增强 (绝对时间/相对时间)
- 规则管理优化 (排序、快速编辑、删除)
- 防止重复条件添加

🛠️ 改进:
- 修复编译警告
- 优化生命周期标注
- 活动日志持久化修复

📚 文档:
- 新增 REGEX_CAPTURE_GUIDE.md
- 更新 CHANGELOG.md
- 更新 README.md 功能特性

--- a/ui/index.html
+++ b/ui/index.html
@@ -390,6 +390,13 @@
                                 <button type="button" class="tag-btn" data-placeholder="{day}" title="日期（2位数字）">{day}</button>
                             </div>
                             <div class="tag-group">
+                                <span class="tag-group-label">正则捕获:</span>
+                                <button type="button" class="tag-btn" data-placeholder="$1" title="正则表达式第1个捕获组">$1</button>
+                                <button type="button" class="tag-btn" data-placeholder="$2" title="正则表达式第2个捕获组">$2</button>
+                                <button type="button" class="tag-btn" data-placeholder="$3" title="正则表达式第3个捕获组">$3</button>
+                                <button type="button" class="tag-btn" data-placeholder="$4" title="正则表达式第4个捕获组">$4</button>
+                            </div>
+                            <div class="tag-group">
                                 <span class="tag-group-label">系统路径:</span>
                                 <button type="button" class="tag-btn" data-placeholder="{desktop}" title="桌面目录">{desktop}</button>
                                 <button type="button" class="tag-btn" data-placeholder="{documents}" title="文档目录">{documents}</button>
