feat: 完成文件夹调度系统前端UI
✅ 已完成功能:

1. 监控列表显示执行方式
   - ✅ getTriggerModeDisplay() 生成友好的显示文本
   - ✅ 文件夹卡片中显示触发模式图标

2. 添加/编辑文件夹UI
   - ✅ 美观的触发模式选择器（4种模式）
   - ✅ 定时执行配置（间隔/每天/每周）
   - ✅ 完整的CSS样式

3. JavaScript交互逻辑
   - ✅ 触发模式切换显示/隐藏调度配置
   - ✅ 调度类型切换显示对应详细配置
   - ✅ 保存时收集所有调度数据
   - ✅ 编辑时填充调度数据
   - ✅ 兼容旧版本 processing_mode

📋 待实现:
- 后端调度逻辑（定时任务执行）
- 完整测试

--- a/ui/index.html
+++ b/ui/index.html
@@ -279,23 +279,31 @@
                         <div class="trigger-mode-selector">
                             <label class="trigger-option">
                                 <input type="radio" name="triggerMode" value="immediate">
-                                <span class="trigger-label">🚀 立即执行</span>
-                                <span class="trigger-desc">检测到文件立即整理</span>
+                                <div>
+                                    <span class="trigger-label">🚀 立即执行</span>
+                                    <span class="trigger-desc">检测到文件立即整理</span>
+                                </div>
                             </label>
                             <label class="trigger-option">
                                 <input type="radio" name="triggerMode" value="manual" checked>
-                                <span class="trigger-label">✋ 手动确认</span>
-                                <span class="trigger-desc">添加到待处理列表</span>
+                                <div>
+                                    <span class="trigger-label">✋ 手动确认</span>
+                                    <span class="trigger-desc">添加到待处理列表</span>
+                                </div>
                             </label>
                             <label class="trigger-option">
                                 <input type="radio" name="triggerMode" value="on_startup">
-                                <span class="trigger-label">🔄 启动时执行</span>
-                                <span class="trigger-desc">程序启动时处理</span>
+                                <div>
+                                    <span class="trigger-label">🔄 启动时执行</span>
+                                    <span class="trigger-desc">程序启动时处理</span>
+                                </div>
                             </label>
                             <label class="trigger-option">
                                 <input type="radio" name="triggerMode" value="scheduled">
-                                <span class="trigger-label">⏱️ 定时执行</span>
-                                <span class="trigger-desc">按时间计划执行</span>
+                                <div>
+                                    <span class="trigger-label">⏱️ 定时执行</span>
+                                    <span class="trigger-desc">按时间计划执行</span>
+                                </div>
                             </label>
                         </div>
                     </div>
