feat: 实现规则列表分组功能
新功能：
- 按目标文件夹自动分组显示规则
- 组可折叠/展开，节省空间
- 组内规则可上下移动（限制在组内）
- 组可上下移动、删除
- 组整体启用/禁用（支持部分启用状态）

技术实现：
- 新增 rule_groups.js 模块，包含所有分组相关逻辑
- 新增 CSS 样式支持分组UI
- appState 新增 collapsedGroups 状态管理
- renderRules 自动调用 renderRulesGrouped

UI优化：
- 组头显示目标路径、规则数量
- 组头支持折叠/展开动画
- 组内规则卡片特殊样式（无边距、浅背景）
- 部分启用状态的视觉反馈
- 响应式适配小窗口

文件变更：
- ui/app_v2.js: 添加 collapsedGroups 状态，修改 renderRules
- ui/rule_groups.js: 新增分组渲染和操作函数
- ui/styles_minimal.css: 新增分组相关样式
- ui/index.html: 引入 rule_groups.js 脚本

--- a/ui/index.html
+++ b/ui/index.html
@@ -608,6 +608,7 @@
         <div class="status-message" id="statusMessage">就绪</div>
     </div>
 
+    <script src="rule_groups.js"></script>
     <script src="app_v2.js"></script>
 </body>
 </html>
