feat: 添加规则列表视图切换功能
新功能：
1. 添加视图切换器（位于添加规则按钮左侧）
   - 使用图标 + 下拉菜单的组合设计
   - 两种视图模式：分组视图、列表视图

2. UI 组件
   - 图标自动切换（分组图标/列表图标）
   - 下拉菜单选择器
   - 悬停效果和过渡动画

3. 功能实现
   - appState 添加 viewMode 字段
   - 修改 renderRules 函数支持视图切换
   - 添加 updateViewIcon 函数更新图标显示
   - 事件监听器处理视图切换

4. CSS 样式
   - .header-actions: 头部操作区域布局
   - .view-switcher: 视图切换器样式
   - 支持悬停和焦点状态

用户体验：
- 保留原有的列表视图（V2.2 之前）
- 新增分组视图（V2.3+）
- 用户可以自由切换，满足不同使用习惯
- 视图切换即时生效，无需刷新

视觉效果：
- 极简风格，与整体UI一致
- 图标直观，一眼识别当前视图
- 流畅的过渡动画

--- a/ui/index.html
+++ b/ui/index.html
@@ -94,9 +94,21 @@
             <section class="tab-pane active" id="rules-pane">
                 <div class="pane-header">
                     <h2>整理规则</h2>
-                    <button class="btn-primary" id="addRuleBtn">
-                        + 添加规则
-                    </button>
+                    <div class="header-actions">
+                        <div class="view-switcher">
+                            <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
+                                <path id="view-icon-group" d="M2 3h5v5H2V3zm7 0h5v5H9V3zM2 10h5v5H2v-5zm7 0h5v5H9v-5z"/>
+                                <path id="view-icon-list" d="M2 3h12v2H2V3zm0 4h12v2H2V7zm0 4h12v2H2v-2z" style="display:none;"/>
+                            </svg>
+                            <select id="viewModeSelect">
+                                <option value="grouped">分组视图</option>
+                                <option value="list">列表视图</option>
+                            </select>
+                        </div>
+                        <button class="btn-primary" id="addRuleBtn">
+                            + 添加规则
+                        </button>
+                    </div>
                 </div>
                 <div class="rules-list" id="rulesList">
                     <div class="empty-state">
