feat: 添加分栏视图和分组快速添加规则功能

--- a/ui/index.html
+++ b/ui/index.html
@@ -99,10 +99,12 @@
                             <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
                                 <path id="view-icon-group" d="M2 3h5v5H2V3zm7 0h5v5H9V3zM2 10h5v5H2v-5zm7 0h5v5H9v-5z"/>
                                 <path id="view-icon-list" d="M2 3h12v2H2V3zm0 4h12v2H2V7zm0 4h12v2H2v-2z" style="display:none;"/>
+                                <path id="view-icon-split" d="M2 2h5v12H2V2zm7 0h5v12H9V2z" style="display:none;"/>
                             </svg>
                             <select id="viewModeSelect">
                                 <option value="grouped">分组视图</option>
                                 <option value="list">列表视图</option>
+                                <option value="split">分栏视图</option>
                             </select>
                         </div>
                         <button class="btn-primary" id="addRuleBtn">
