fix: 修复图标功能的三个问题
问题1：粘贴SVG功能不工作
修复：
- 为图标选择器添加tabindex和contenteditable属性
- 移除冲突的click事件监听器
- 改进paste事件处理逻辑
- 添加更清晰的通知消息

问题2：缺少右键菜单支持
新增功能：
- 实现contextmenu事件监听
- 创建右键菜单UI组件
- 添加三个菜单项：
  1. 粘贴SVG (Ctrl+V) - 使用Clipboard API
  2. 从图标库选择 - 打开图标选择器
  3. 恢复默认图标 - 重置为file-earmark
- 菜单样式优美，带悬停效果

问题3：布局错位
修复：
- 更新.rule-card.compact的grid-template-columns
  从: 24px minmax(60px, 1fr) ...
  到: 24px 32px minmax(60px, 1fr) ...
  (添加32px图标列)
- 同步更新分栏视图的列布局
- 同步更新移动端响应式布局
- 移除不必要的margin-right
- 确保图标在grid单元格中居中

用户体验优化：
- 更新提示文本为emoji风格，更醒目
- 优化tooltip提示信息
- 图标选择器只响应左键点击
- 右键菜单有阴影和动画效果
- 所有图标操作方式清晰可见

技术细节：
- 使用navigator.clipboard.readText()读取剪贴板
- contextmenu事件阻止默认行为
- 菜单采用fixed定位，z-index 10000
- 点击其他地方自动关闭菜单
- Grid布局确保所有元素对齐

--- a/ui/index.html
+++ b/ui/index.html
@@ -410,13 +410,13 @@
                     <div class="form-group">
                         <label for="ruleName">规则名称 <span class="required">*</span></label>
                         <div class="rule-name-with-icon">
-                            <div class="rule-icon-selector" id="ruleIconSelector" title="点击选择图标，或按 Ctrl+V 粘贴 SVG">
+                            <div class="rule-icon-selector" id="ruleIconSelector" title="左键选择图标 | 右键更多选项 | Ctrl+V 粘贴SVG">
                                 <i class="bi bi-file-earmark" id="ruleIconPreview" style="color: #667eea;"></i>
                             </div>
                             <input type="color" id="ruleColorPicker" value="#667eea" title="选择颜色">
                             <input type="text" id="ruleName" placeholder="例如：图片文件归类" required>
                         </div>
-                        <p class="hint">点击图标选择，或在图标上按 Ctrl+V 粘贴 SVG 代码</p>
+                        <p class="hint">💡 图标操作：<strong>左键</strong> 选择图标 | <strong>右键</strong> 菜单 | <strong>Ctrl+V</strong> 粘贴SVG代码</p>
                     </div>
                     
                     <div class="form-group">
