fix: 优化图标选择器交互体验
改进内容：

1. 鼠标悬停自动聚焦
   - mouseenter事件自动focus
   - mouseleave事件自动blur
   - 无需点击即可接收粘贴事件

2. 防止事件重复绑定
   - 使用iconSelectorHandlers存储处理函数
   - 重新初始化前先移除旧监听器
   - 避免事件处理函数堆积

3. 改进右键菜单
   - 明确的事件处理函数引用
   - 正确的preventDefault和stopPropagation
   - 添加详细的调试日志

4. 优化用户体验
   - 鼠标悬停在图标上即可粘贴
   - 不需要先点击图标
   - 更新提示文本说明新的交互方式

5. 自动重新初始化
   - SVG粘贴后自动重新绑定事件
   - 延迟50ms确保DOM更新完成

测试步骤：
1. 打开规则编辑窗口
2. 鼠标悬停在图标选择器上
3. 直接Ctrl+V粘贴SVG（无需点击）
4. 右键点击图标选择器
5. 应该看到右键菜单

控制台应显示：
[图标选择器] 鼠标悬停，自动聚焦
[图标选择器] 粘贴事件触发
[图标选择器] 右键菜单触发，位置: x, y

--- a/ui/index.html
+++ b/ui/index.html
@@ -407,17 +407,17 @@
             </div>
             <div class="modal-body">
                 <form id="ruleForm">
-                    <div class="form-group">
-                        <label for="ruleName">规则名称 <span class="required">*</span></label>
-                        <div class="rule-name-with-icon">
-                            <div class="rule-icon-selector" id="ruleIconSelector" title="左键选择图标 | 右键更多选项 | Ctrl+V 粘贴SVG">
-                                <i class="bi bi-file-earmark" id="ruleIconPreview" style="color: #667eea;"></i>
-                            </div>
-                            <input type="color" id="ruleColorPicker" value="#667eea" title="选择颜色">
-                            <input type="text" id="ruleName" placeholder="例如：图片文件归类" required>
+                <div class="form-group">
+                    <label for="ruleName">规则名称 <span class="required">*</span></label>
+                    <div class="rule-name-with-icon">
+                        <div class="rule-icon-selector" id="ruleIconSelector" title="左键选择图标 | 右键更多选项 | 鼠标悬停后 Ctrl+V 粘贴SVG">
+                            <i class="bi bi-file-earmark" id="ruleIconPreview" style="color: #667eea;"></i>
                         </div>
-                        <p class="hint">💡 图标操作：<strong>左键</strong> 选择图标 | <strong>右键</strong> 菜单 | <strong>Ctrl+V</strong> 粘贴SVG代码</p>
+                        <input type="color" id="ruleColorPicker" value="#667eea" title="选择颜色">
+                        <input type="text" id="ruleName" placeholder="例如：图片文件归类" required>
                     </div>
+                    <p class="hint">💡 图标操作：<strong>左键</strong> 选择图标 | <strong>右键</strong> 菜单 | <strong>鼠标悬停</strong>后 <strong>Ctrl+V</strong> 直接粘贴SVG</p>
+                </div>
                     
                     <div class="form-group">
                         <label>应用范围</label>
